--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="header__wrap">
               <div class="header__logo">
                 <a href="index.html" class="logo">
-                    <img src="../svg/logo.svg" alt="Логотип">
+                    <img src="img/svg/logo.svg" alt="Логотип">
                 </a>      </div>
               <div class="header__nav">
                 <nav class="nav">
